--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
 
+
   font-family: 'Open Sans', sans-serif;
     max-width: 90%;
     margin: auto;
@@ -14,6 +15,7 @@ body {
 
 h1 {
   background-color: rgba(255, 238, 0, 0.801);
+  opacity: 0.8;
 }
 
 p {
@@ -26,6 +28,7 @@ p {
 a {
     color: rgba(0, 0, 0, 0.801);
     text-decoration: none;
+    
 
 }
 
@@ -33,11 +36,23 @@ a {
 a:link {
     background-color: rgba(255, 238, 0, 0.801);
     text-decoration: none;
+    color: black;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 50%;
   }
   
   a:visited {
     background-color: rgb(229, 255, 0);
     text-decoration: none;
+    color: black;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 50%;
   }
   
   a:hover {
@@ -53,6 +68,7 @@ a:link {
 
   table {
     border-style: solid;
+    
   }
 
   td {
